fix: icon width on Safari

--- a/src/components/common/DeleteIconButton/deleteIconButton.scss
+++ b/src/components/common/DeleteIconButton/deleteIconButton.scss
@@ -3,6 +3,7 @@
   --confirm-color: #d32f2f;
   --size: 40px;
   height: var(--size);
+  width: var(--size);
   background: transparent;
   border: none;
 
